feat: Employee Ticket Portal + fix Lombok/JDK25 compile issue